force-app/main/default/objects/Lead/validationRules/Require_Event_Interest__c.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireEventInterest</fullName>
    <active>false</active>
    <description>Require Category (Event Interest) on Lead</description>
    <errorConditionFormula>ISBLANK(TEXT(Event_Interest__c))</errorConditionFormula>
    <errorDisplayField>Event_Interest__c</errorDisplayField>
    <errorMessage>Please select Category (Event Interest).</errorMessage>
</ValidationRule>